<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RSM Hub</string>
    <string name="username_edit_text">Username</string>
    <string name="password_edit_text">Password</string>
    <string name="forget_password">Forgot Password</string>
    <string name="login_button">Login</string>
    <string name="login_logo_image_view_content_description">RSM Company Logo</string>
    <string name="welcome_login_text_view">Welcome To RSM HUB</string>
    <string name="email_edit_text_auto_fill_hint">Email</string>
    <string name="main_act_rsm_mune_txt">RSM MENU</string>
    <string name="requisition_name">Requisition Name</string>
    <string name="requisition_description">Requisition Description</string>
    <string name="make_requisition">Make Requisition</string>
    <string name="click_to_enter_date">Click To Enter Date</string>
    <string name="requisition_item_name">Requisition Item Name</string>
    <string name="add_requisition_item">Add Requisition Item</string>
    <string name="add_requisiton_item_quantity">Quantity</string>
    <string name="add_requisiton_item_unit_cost">Unit Cost</string>
    <string name="add_requisiton_item_supplier">Supplier</string>
    <string name="add_requisiton_item_name">Name</string>
    <string name="not_submitted">Not Submitted</string>
    <string name="approved">APPROVED</string>
    <string name="pending">PENDING</string>
    <string name="requisition_expenses">Requisition Expenses</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="req_expenses_not_submitted">NOT SUBMITTED</string>
    <string name="c">C</string>
    <string name="List_view_supplier">SUPPLIER</string>
    <string name="quantity">QUANTITY</string>
    <string name="total">TOTAL</string>
    <string name="status">STATUS</string>
    <string name="submitted">Submitted</string>
    <string name="custom_add_item_dialog_name">Name *</string>
    <string name="custom_add_item_dialog_supplier">Supplier *</string>
    <string name="custom_add_item_dialog_unit_cost">Unit Cost *</string>
    <string name="custom_add_item_dialog_quantity">Quantity *</string>
    <string name="custom_add_item_dialog_quantityy">Quantity</string>
    <string name="cutom_add_item_dialog_supplier">Supplier</string>
    <string name="custom_add_item_dialogg_unit_cost">Unit Cost</string>
    <string name="custm_add_item_dialogg_quantity">Quantity</string>
    <string name="custom_add_item_dialog_cancel">Cancel</string>
    <string name="custom_add_reqisition_items_dialog_add_requisition_item">Add Requisition Item</string>
    <string name="custom_add_requisition_items_dialog_name_textview">Name *</string>
    <string name="custom_add_requisition_items_dialog_supplier_textview">Supplier *</string>
    <string name="custom_add_requisition_items_dialog_unit_cost_textview">Unit Cost *</string>
    <string name="custom_add_requisition_items_dialog_quantity_textview">Quantity *</string>
    <string name="custom_add_requisition_items_dialog_click_to_enter_date_textview">Date *</string>
    <string name="custom_add_requisition_items_dialog_add_item">ADD</string>
    <string name="custom_add_requisition_items_dialog_cancel">Cancel</string>
    <string name="custom_add_requisition_items_dialog_supplier">Supplier</string>
    <string name="custom_add_requisition_items_dialog_unit_cost">Unit Cost</string>
    <string name="custom_add_requisition_items_dialog_click_to_enter_date">Qantity</string>
    <string name="requisition_details_edit_item_name">Item Name</string>
    <string name="requisition_details_edit_m">M</string>
    <string name="requisition_details_edit_supplier">SUPPLIER</string>
    <string name="requisition_details_edit_unit_cost">UNIT COST</string>
    <string name="requsition_details_edit_quantity">QUANTITY</string>
    <string name="requisiton_details_edit_total">TOTAL</string>
    <string name="requisition_details_edit_delete">DELETE</string>
    <string name="requisition_details_edit_edit">EDIT</string>
    <string name="requisition_details_edit_reconcile_item">RECONCILE ITEM</string>
    <string name="r">R</string>
    <string name="requisition_title">Requisition title</string>
    <string name="custom_edit_requisition_items_dialog_edit">EDIT</string>
    <string name="title_activity_requisition_details_edited_item">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="list_view_req_expenses_delete_completely_button">delete completely button</string>
    <string name="psshht_no_results_found_pendind_frag">Psshht! No results found</string>
    <string name="error_image_view_pending_expenses">error_image_view</string>
    <string name="requisition_data_expenses_adapter_pending">PENDING</string>
    <string name="requisition_data_expenses_adapter_declined">DECLINED</string>
    <string name="requisition_data_expenses_adapter_approved">APPROVED</string>
    <string name="bottom_bar_menu_search">Search</string>
    <string name="bottom_bar_menu_home">Home</string>
    <string name="bottom_bar_menu_view_requisitions">View</string>
    <string name="activity_user_prof_chris_rabut">Chris Rabut</string>
    <string name="activity_user_proff_chris_rabut">chris_rabut</string>
    <string name="user_profile_textinputlayut_phone">Phone</string>
    <string name="user_profile_textinputlayut_phone_mail">Mail</string>
    <string name="user_profile_textinputlayut_phone_name">Name</string>
    <string name="fragment_user_profile_name">Name :</string>
    <string name="fagment_user_profile_email">Email :</string>
    <string name="fragment_user_profile_number">Number :</string>
    <string name="fragment_user_profile_0718522138">0718522138</string>
    <string name="fragment_user_profile_mcigeyochristopher_gmail_com">mcigeyochristopher@gmail.com</string>
    <string name="fragment_user_profile_christopher_rabut">Christopher Rabut</string>
    <string name="bottom_bar_menu_create">Create</string>
    <string name="fragment_user_profie_logout">LOGOUT</string>
    <string name="title_activity_maps">Map</string>
    <string name="req_data_edit_submitted">SUBMITTED</string>
    <string name="req_data_edit_approved">APPROVED</string>
    <string name="req_data_edit_declined">DECLINED</string>
    <string name="splash_screen_rsm_hub_app">RSM HUB APP</string>
    <string name="splash_screen_roadshow_masters">Roadshow Masters</string>
    <string name="splash_screen_rsmhub_logo">RSMHUB LOGO</string>
    <string name="password_hint">******</string>
    <string name="enter_password">password</string>
    <string name="email_login">email</string>
    <string name="chriscodex_gmail_com">chriscodex@gmail.com</string>
    <string name="password_login">Password</string>

    <!-- TODO: androidrate string -->
    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_no">No, Thanks</string>

</resources>
