<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/background_gradient" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="170dp"
        android:id="@+id/layoutInput"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_white"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--        <TextView-->
<!--            android:text="Full name"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content" />-->
<!--        <EditText-->
<!--            android:drawablePadding="20dp"-->
<!--            android:drawableRight="@drawable/ic_person"-->
<!--            android:hint="Bagicode"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->
        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/email_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/LoginEmailEditText"
            android:drawablePadding="15dp"
            android:drawableEnd="@drawable/ic_person"
            android:hint="@string/chriscodex_gmail_com"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/email_edit_text_auto_fill_hint" />
        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/enter_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/PasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_password"
            android:drawablePadding="15dp"
            android:hint="@string/password_hint"
            android:autofillHints="@string/password_login"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/loginButtonID"
            android:textColor="#FFF"
            android:background="@drawable/rec_gradient"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:text="@string/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
<!--        <Button-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:textColor="#FFF"-->
<!--            android:background="@drawable/rec_gradient_fb"-->
<!--            android:textAllCaps="false"-->
<!--            android:text="Sign Up with FACEBOOK"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->

        <com.victor.loading.rotate.RotateLoading
            android:id="@+id/rotateLoadingProgessDialog"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            app:loading_color="@color/colorPrimary" />

    </LinearLayout>


    <ImageView
        android:id="@+id/imageVIew"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circular_rsm_logo_1"
        android:padding="5dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/login_logo_image_view_content_description" />

    <TextView
        android:textSize="15sp"
        android:textColor="#FFF"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageVIew"
        android:text="@string/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/WelcomeLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutInput"

        android:layout_centerHorizontal="true"
        android:text="@string/welcome_login_text_view"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold" />


</RelativeLayout>