<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:minHeight="281dp"
    android:minWidth="320dp"
    android:layout_gravity="center"
    android:background="@color/brilliantWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

<!--        <TextView-->
<!--            android:id="@+id/custom_add_requisition_dialog_info_title"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="25dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:fontFamily="sans-serif-medium"-->
<!--            android:text="@string/custom_add_reqisition_items_dialog_add_requisition_item"-->
<!--            android:textSize="15sp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <!--        <ProgressBar-->
        <!--            android:id="@+id/progress_dialog"-->
        <!--            style="?android:attr/progressBarStyle"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center_horizontal"-->
        <!--            android:progress="25" />-->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:text="@string/custom_add_requisition_items_dialog_name_textview"
                    android:textColor="#898989"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/customAddRequisitionItemNameTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    app:boxBackgroundColor="@color/textWhite"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/customAddRequisitionItemNameTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/add_requisiton_item_name"
                        android:textColorHighlight="@color/colorPrimary"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:text="@string/custom_add_requisition_items_dialog_supplier_textview"
                    android:textColor="#898989"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/customAddRequisitionItemDialogSupplierTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    app:boxBackgroundColor="@color/textWhite"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/customAddRequisitionItemDialogSupplierTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/custom_add_requisition_items_dialog_supplier"
                        android:textColorHighlight="@color/colorPrimary"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:text="@string/custom_add_requisition_items_dialog_unit_cost_textview"
                    android:textColor="#898989"
                    android:textSize="14sp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/customAddRequisitionItemDialogUnitCostTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    app:boxBackgroundColor="@color/textWhite"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/customAddRequisitionItemDialogUnitCostTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/custom_add_requisition_items_dialog_unit_cost"
                        android:inputType="number"
                        android:textColorHighlight="@color/colorPrimary"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:text="@string/custom_add_requisition_items_dialog_quantity_textview"
                    android:textColor="#898989"
                    android:textSize="14sp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/customAddRequisitionItemsDialogQauntityTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    app:boxBackgroundColor="@color/textWhite"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/customAddRequisitionItemsDialogQauntityTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/custom_add_requisition_items_dialog_click_to_enter_date"
                        android:inputType="number"
                        android:textColorHighlight="@color/colorPrimary"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.victor.loading.rotate.RotateLoading
                    android:id="@+id/customAddRequisitionItemsDialogRotateLoader"
                    android:layout_width="29dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    app:loading_color="@color/createButton1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/customAddRequisitionItemsDiaologAddButtonId"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:text="@string/custom_add_requisition_items_dialog_add_item"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                        android:textColor="@color/textWhite"
                        android:theme="@style/MatButton"
                        app:backgroundTint="@color/createButton4"
                        app:cardPreventCornerOverlap="true"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="10dp"
                        app:contentPaddingBottom="0dp"
                        app:icon="@drawable/ic_add"
                        app:iconTint="@color/textWhite" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/customAddRequisitionItemsCancelButtonId"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="9dp"
                        android:text="@string/custom_add_requisition_items_dialog_cancel"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                        android:textColor="@color/textWhite"
                        android:theme="@style/MatButton"
                        app:backgroundTint="@color/greyRedErrorCol3"
                        app:cardPreventCornerOverlap="true"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="10dp"
                        app:contentPaddingBottom="0dp" />


                </LinearLayout>


            </LinearLayout>

        </ScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>